--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,6 @@
 @tailwind utilities;
 
 
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -29,12 +23,12 @@ code {
     @apply m-0 p-0 box-border;
   }
 
-  div {
+  div, span {
     @apply font-poppins;
   }
 
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+  .btn {
+    @apply py-1 px-7 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-[#858792] rounded-full border border-gray-100 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700;
   }
 
   h1, 
