--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,19 @@ code {
 @layer components {
   
   * {
-    @apply m-0 p-0 box-border;
+    @apply box-border p-0 m-0;
   }
+
+  body {
+    @apply debug-screens;
+  }
+
+  h1, 
+  h2, 
+  h3 {
+    @apply font-cormorant;
+  }
+}
 
   div, span {
     @apply font-poppins;
@@ -31,9 +42,35 @@ code {
     @apply py-1 px-7 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-[#858792] rounded-full border border-gray-100 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700;
   }
 
-  h1, 
-  h2, 
-  h3 {
-    @apply font-cormorant;
+
+  /* Skill Section */
+  .special-skillbox {
+    @apply px-11 pb-12 pt-11 mb-6 bg-[#2a2c39];
   }
-}
+
+  .special-box {
+    @apply mb-6 text-base font-medium text-[#858792] flex justify-between;
+  }
+
+  .progres {
+    @apply w-full h-2 bg-gray-200 rounded-full dark:bg-gray-700;
+  }
+
+  .progres-bar {
+    @apply bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full h-2;
+  }
+
+  /* Proyect Section */
+  .proyect-title {
+    @apply pt-5 text-3xl text-center tracking-wide text-white bg-[#262626];
+  }
+
+  .proyect-img {
+    @apply pb-20 pt-5 px-20 bg-[#262626];
+  }
+
+  .btn-container {
+    @apply flex justify-center mt-4 mb-2 gap-x-10;
+  }
+
+  
