--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.heroH1 {
+  color: #fff59d;
+  border-right: solid 3px rgba(255 ,255 ,255 ,.75);
+  white-space: nowrap;
+  overflow: hidden; 
+  font-size: 48px;
+  text-align: center;
+  text-shadow: 0 0 10px #fff59d;
+  
+  animation: animated-text 2s steps(12,end) 1s 1 normal both,
+             animated-cursor 600ms steps(12,end) infinite;
+
+}
+
+@keyframes animated-text{
+  from{width: 0;}
+  to{width: 300px;}
+}
+            
+@keyframes animated-cursor{
+  from{border-right-color: rgba(255, 255, 255,.75);}
+  to{border-right-color: transparent;}
+};
